--- a/apps/docs/src/styles/abstracts/_variables.scss
+++ b/apps/docs/src/styles/abstracts/_variables.scss
@@ -71,3 +71,9 @@
   --ff-primary: "Geist", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
+
+$breakpoints: (
+  md: 40rem,
+  lg: 50rem,
+  xl: 64rem,
+);
