--- a/apps/docs/src/styles/components/molecules/_hero.scss
+++ b/apps/docs/src/styles/components/molecules/_hero.scss
@@ -1,8 +1,14 @@
+@use "./../../abstracts/mixins" as *;
+
 .hero {
   position: relative;
   padding: var(--py-32) var(--px-4);
   overflow: hidden;
   color: rgb(var(--color-foreground));
+
+  @include respond(md) {
+    padding: var(--py-16) var(--px-4) var(--py-8);
+  }
 
   &__wrapper {
     position: relative;
@@ -18,6 +24,11 @@
     margin-bottom: var(--mb-5);
     line-height: 1.25;
     text-wrap: balance;
+
+    @include respond(md) {
+      font-size: var(--text-4xl);
+    }
+
     &-bottom {
       background: linear-gradient(
         to right,
@@ -43,6 +54,10 @@
     align-items: center;
     justify-content: center;
     gap: var(--gap-4);
+
+    @include respond(md) {
+      flex-direction: column;
+    }
   }
 
   &__partners {
