--- a/apps/docs/src/styles/base/_reset.scss
+++ b/apps/docs/src/styles/base/_reset.scss
@@ -3,7 +3,7 @@
   font-family: "Geist";
   font-style: normal;
   font-weight: 400;
-  src: url("../fonts/geist-v4-latin-regular.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  src: url("/fonts/geist-v4-latin-regular.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 
 /* geist-500 - latin */
@@ -12,7 +12,7 @@
   font-family: "Geist";
   font-style: normal;
   font-weight: 500;
-  src: url("../fonts/geist-v4-latin-500.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  src: url("/fonts/geist-v4-latin-500.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 
 /* geist-600 - latin */
@@ -21,7 +21,7 @@
   font-family: "Geist";
   font-style: normal;
   font-weight: 600;
-  src: url("../fonts/geist-v4-latin-600.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  src: url("/fonts/geist-v4-latin-600.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 
 /* geist-700 - latin */
@@ -30,7 +30,7 @@
   font-family: "Geist";
   font-style: normal;
   font-weight: 700;
-  src: url("../fonts/geist-v4-latin-700.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  src: url("/fonts/geist-v4-latin-700.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 
 *,
