--- a/apps/docs/src/styles/components/atoms/_swiper-pagination.scss
+++ b/apps/docs/src/styles/components/atoms/_swiper-pagination.scss
@@ -9,12 +9,26 @@
 
 .pagination-item {
   --size: 0.5rem;
-  cursor: pointer;
+  --touch-size: 44px;
+  position: relative;
   width: var(--size);
   height: var(--size);
   border-radius: 9999px;
   border: 1px solid rgb(var(--color-border));
-  transition: 0.3s;
+  transition: all 0.3s ease;
+  cursor: pointer;
+  background-color: transparent;
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: var(--touch-size);
+    height: var(--touch-size);
+    border-radius: 9999px;
+  }
 
   &:focus-visible {
     outline: 2px solid rgb(var(--color-primary));
