feat: animations, reduce code

--- a/apps/docs/src/styles/base/_reset.scss
+++ b/apps/docs/src/styles/base/_reset.scss
@@ -33,6 +33,16 @@
   src: url("/fonts/geist-v4-latin-700.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 
+@media (prefers-reduced-motion: reduce) {
+  *,
+  *::before,
+  *::after {
+    animation-duration: 0.01ms !important;
+    animation-iteration-count: 1 !important;
+    transition-duration: 0.01ms !important;
+  }
+}
+
 *,
 *::before,
 *::after {
