--- a/apps/docs/src/styles/components/molecules/_example.scss
+++ b/apps/docs/src/styles/components/molecules/_example.scss
@@ -7,6 +7,21 @@
   display: flex;
   flex-direction: column;
 
+  opacity: 0;
+  transform: translateY(30px);
+  transition: all 0.6s cubic-bezier(0.4, 0, 0.2, 1);
+
+  @for $i from 1 through 5 {
+    &:nth-child(#{$i}) {
+      animation-delay: #{$i * 0.1}s;
+    }
+  }
+
+  &.animate {
+    opacity: 1;
+    transform: translateY(0);
+  }
+
   &__header {
     padding: 1.5rem;
     border-bottom: 1px solid rgb(var(--color-border));
