--- a/apps/docs/src/styles/layout/_sidebar.scss
+++ b/apps/docs/src/styles/layout/_sidebar.scss
@@ -12,4 +12,14 @@
       padding: var(--py-2) var(--px-3);
     }
   }
+
+  & li {
+    animation: fadeInLeft 0.4s ease-out backwards;
+
+    @for $i from 1 through 15 {
+      &:nth-child(#{$i}) {
+        animation-delay: #{$i * 0.03}s;
+      }
+    }
+  }
 }
