--- a/apps/docs/src/styles/components/atoms/_link.scss
+++ b/apps/docs/src/styles/components/atoms/_link.scss
@@ -33,6 +33,11 @@
       }
     }
 
+    &:focus-visible {
+      outline: 2px solid rgb(var(--color-primary));
+      outline-offset: 2px;
+    }
+
     &.link--primary {
       animation: slideInLeft 0.3s ease-out;
     }
@@ -225,14 +230,20 @@
       font-size: var(--text-xs);
       color: rgb(var(--color-muted-foreground));
       line-height: 1.5;
+      border-radius: 0;
       transition: 0.2s;
     }
 
-    &--active {
+    &-active {
       &:link,
       &:visited {
         color: rgb(var(--color-primary));
       }
+    }
+
+    &:focus-visible {
+      outline: 2px solid rgb(var(--color-primary));
+      outline-offset: 2px;
     }
 
     &:hover {
