--- a/apps/docs/src/styles/main.scss
+++ b/apps/docs/src/styles/main.scss
@@ -28,6 +28,9 @@
 @use "./components/molecules/timeline";
 @use "./components/molecules/principles";
 @use "./components/molecules/impact";
+@use "./components/molecules/intro";
+@use "./components/molecules/features";
+@use "./components/molecules/browsers";
 
 @use "./layout/header";
 @use "./layout/nav";
