feat: 404, back router

--- a/apps/docs/src/styles/animations/_keyframes.scss
+++ b/apps/docs/src/styles/animations/_keyframes.scss
@@ -38,6 +38,18 @@
   }
 }
 
+@keyframes pulse {
+  0%,
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
+  50% {
+    transform: scale(1.05);
+    opacity: 0.8;
+  }
+}
+
 @keyframes pulseFade {
   0%,
   100% {
