--- a/apps/docs/src/styles/abstracts/_variables.scss
+++ b/apps/docs/src/styles/abstracts/_variables.scss
@@ -11,6 +11,7 @@
   --color-star: 255, 215, 0;
   --color-black: 0, 0, 0;
   --color-sidebar-accent: 245, 245, 245;
+  --color-destructive: 231, 0, 11;
 
   --h-8: 2rem;
   --h-10: 2.5rem;
