feat: getting started, copy refactor

--- a/apps/docs/src/styles/components/molecules/_article.scss
+++ b/apps/docs/src/styles/components/molecules/_article.scss
@@ -65,6 +65,7 @@
       bottom: 0;
       padding: var(--p-5) var(--px-3);
       left: 0;
+      z-index: 9;
       width: 100%;
       background-color: rgb(var(--background));
     }
