--- a/apps/docs/src/styles/main.scss
+++ b/apps/docs/src/styles/main.scss
@@ -31,6 +31,8 @@
 @use "./components/molecules/intro";
 @use "./components/molecules/features";
 @use "./components/molecules/browsers";
+@use "./components/molecules/installation";
+@use "./components/molecules/setup-example";
 
 @use "./layout/header";
 @use "./layout/nav";
