--- a/apps/docs/src/styles/abstracts/_variables.scss
+++ b/apps/docs/src/styles/abstracts/_variables.scss
@@ -12,6 +12,7 @@
   --color-black: 0, 0, 0;
   --color-sidebar-accent: 245, 245, 245;
   --color-destructive: 231, 0, 11;
+  --color-muted: 228, 228, 228;
 
   --h-8: 2rem;
   --h-10: 2.5rem;
@@ -76,5 +77,6 @@
 $breakpoints: (
   md: 40rem,
   lg: 50rem,
+  xsl: 56.25rem,
   xl: 64rem,
 );
