--- a/apps/docs/src/styles/main.scss
+++ b/apps/docs/src/styles/main.scss
@@ -33,6 +33,7 @@
 @use "./components/molecules/browsers";
 @use "./components/molecules/installation";
 @use "./components/molecules/setup-example";
+@use "./components/molecules/api-list";
 
 @use "./layout/header";
 @use "./layout/nav";
