--- a/apps/docs/src/styles/abstracts/_variables.scss
+++ b/apps/docs/src/styles/abstracts/_variables.scss
@@ -72,6 +72,8 @@
   --color-gradient-dark: 168, 85, 247;
   --ff-primary: "Geist", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+
+  --ff-mono: "Geist Mono", "sans-serif";
 }
 
 $breakpoints: (
