--- a/apps/docs/src/styles/base/_reset.scss
+++ b/apps/docs/src/styles/base/_reset.scss
@@ -33,6 +33,42 @@
   src: url("/fonts/geist-v4-latin-700.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 
+/* geist-mono-regular - latin */
+@font-face {
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: "Geist Mono";
+  font-style: normal;
+  font-weight: 400;
+  src: url("/fonts/geist-mono-v4-latin-regular.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
+
+/* geist-mono-500 - latin */
+@font-face {
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: "Geist Mono";
+  font-style: normal;
+  font-weight: 500;
+  src: url("/fonts/geist-mono-v4-latin-500.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
+
+/* geist-mono-600 - latin */
+@font-face {
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: "Geist Mono";
+  font-style: normal;
+  font-weight: 600;
+  src: url("/fonts/geist-mono-v4-latin-600.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
+
+/* geist-mono-700 - latin */
+@font-face {
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: "Geist Mono";
+  font-style: normal;
+  font-weight: 700;
+  src: url("/fonts/geist-mono-v4-latin-700.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
+
 @media (prefers-reduced-motion: reduce) {
   *,
   *::before,
