--- a/apps/docs/src/styles/components/molecules/_browsers.scss
+++ b/apps/docs/src/styles/components/molecules/_browsers.scss
@@ -22,6 +22,14 @@
   align-items: center;
   gap: var(--gap-2);
 
+  transition: 0.3s;
+
+  &:hover {
+    transform: translateY(-4px);
+    box-shadow: 0 8px 16px rgba(var(--color-primary), 0.1);
+    border-color: rgba(var(--color-primary), 0.15);
+  }
+
   &__icon {
     width: 4rem;
     height: 4rem;
