--- a/apps/docs/src/styles/components/molecules/_installation.scss
+++ b/apps/docs/src/styles/components/molecules/_installation.scss
@@ -24,7 +24,9 @@
   gap: var(--gap-3);
 
   &:hover {
-    border-color: rgba(var(--color-border), 0.8);
+    transform: translateY(-4px);
+    box-shadow: 0 8px 16px rgba(var(--color-primary), 0.1);
+    border-color: rgba(var(--color-primary), 0.15);
   }
 
   &__header {
@@ -77,7 +79,7 @@
     background-color: rgba(var(--color-muted), 0.5);
     font-size: var(--text-sm);
     overflow-x: auto;
-
+    font-family: var(--ff-mono);
     .code-viewer__copy {
       position: static;
       z-index: auto;
