--- a/apps/docs/src/styles/components/molecules/_problems.scss
+++ b/apps/docs/src/styles/components/molecules/_problems.scss
@@ -19,6 +19,14 @@
   display: flex;
   flex-direction: column;
 
+  transition: 0.3s;
+
+  &:hover {
+    transform: translateY(-4px);
+    box-shadow: 0 8px 16px rgba(var(--color-primary), 0.1);
+    border-color: rgba(var(--color-primary), 0.15);
+  }
+
   &__icon {
     --size: 3rem;
 
