feat: positioning docs page

--- a/apps/docs/src/styles/main.scss
+++ b/apps/docs/src/styles/main.scss
@@ -34,6 +34,7 @@
 @use "./components/molecules/installation";
 @use "./components/molecules/setup-example";
 @use "./components/molecules/api-list";
+@use "./components/molecules/best-practices";
 
 @use "./layout/header";
 @use "./layout/nav";
