feat: styling-theming page with custom CSS config

--- a/apps/docs/src/styles/base/_reuseable.scss
+++ b/apps/docs/src/styles/base/_reuseable.scss
@@ -9,3 +9,11 @@
     linear-gradient(currentColor 1px, transparent 1px);
   background-size: 40px 40px;
 }
+
+.box-y {
+  margin: 2rem 0;
+}
+
+.ml-4 {
+  margin-left: 1rem;
+}
