--- a/apps/docs/src/styles/components/molecules/_api-list.scss
+++ b/apps/docs/src/styles/components/molecules/_api-list.scss
@@ -18,6 +18,13 @@
     transition: 0.3s;
   }
 
+  &__typography {
+    display: flex;
+    flex-direction: column;
+    gap: var(--gap-2);
+    margin-top: 1rem;
+  }
+
   &__content {
     flex: 1;
 
