feat: dynamic-content page

--- a/apps/docs/src/styles/components/molecules/_installation.scss
+++ b/apps/docs/src/styles/components/molecules/_installation.scss
@@ -80,6 +80,11 @@
     font-size: var(--text-sm);
     overflow-x: auto;
     font-family: var(--ff-mono);
+
+    p {
+      word-break: break-word;
+    }
+
     .code-viewer__copy {
       position: static;
       z-index: auto;
