feat: hint page implementation

--- a/apps/docs/src/styles/main.scss
+++ b/apps/docs/src/styles/main.scss
@@ -35,6 +35,7 @@
 @use "./components/molecules/setup-example";
 @use "./components/molecules/api-list";
 @use "./components/molecules/best-practices";
+@use "./components/molecules/contextual";
 
 @use "./layout/header";
 @use "./layout/nav";
