feat: tours-page with styling

--- a/apps/docs/src/styles/main.scss
+++ b/apps/docs/src/styles/main.scss
@@ -36,6 +36,7 @@
 @use "./components/molecules/api-list";
 @use "./components/molecules/best-practices";
 @use "./components/molecules/contextual";
+@use "./components/molecules/controls";
 
 @use "./layout/header";
 @use "./layout/nav";
