--- a/apps/docs/src/styles/components/molecules/_api-list.scss
+++ b/apps/docs/src/styles/components/molecules/_api-list.scss
@@ -4,6 +4,15 @@
   gap: var(--gap-4);
   list-style-type: none;
 
+  &__code {
+    background-color: rgba(var(--color-muted), 0.5);
+    border: 1px solid rgba(var(--color-border), 0.5);
+    border-radius: 0.375rem;
+    padding: var(--px-3);
+    font-family: var(--ff-mono);
+    font-size: var(--text-sm);
+  }
+
   &__item {
     background-color: rgb(var(--color-card));
     border: 1px solid rgba(var(--color-border), 0.5);
