--- a/apps/docs/src/styles/abstracts/_variables.scss
+++ b/apps/docs/src/styles/abstracts/_variables.scss
@@ -38,7 +38,9 @@
   --py-16: 4rem;
   --py-20: 5rem;
   --py-24: 5.5rem;
+  --py-28: 7rem;
   --py-32: 8rem;
+  --py-40: 10rem;
   --py-1: 0.25rem;
   --px-5: 1.5rem;
   --px-4: 1rem;
@@ -70,8 +72,9 @@
 
   --color-gradient-light: 124, 58, 237;
   --color-gradient-dark: 168, 85, 247;
-  --ff-primary: "Geist", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  --ff-primary:
+    "Geist", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 
   --ff-mono: "Geist Mono", "sans-serif";
 }
