--- a/apps/docs/src/styles/components/atoms/_swiper-pagination.scss
+++ b/apps/docs/src/styles/components/atoms/_swiper-pagination.scss
@@ -1,15 +1,21 @@
+@use "../../abstracts/mixins" as *;
+
 .custom-swiper-pagination {
   display: flex;
   align-items: center;
   justify-content: center;
   gap: var(--gap-3);
-  width: 3.5rem;
+  width: 6rem;
   margin: 1rem auto;
+
+  @include respond(md) {
+    width: 5rem;
+  }
 }
 
 .pagination-item {
-  --size: 0.5rem;
-  --touch-size: 44px;
+  --size: 1.2rem;
+
   position: relative;
   width: var(--size);
   height: var(--size);
@@ -19,17 +25,8 @@
   cursor: pointer;
   background-color: transparent;
 
- 
-
-  &::before {
-    content: "";
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: var(--touch-size);
-    height: var(--touch-size);
-    border-radius: 9999px;
+  @include respond(md) {
+    --size: 1rem;
   }
 
   &:focus-visible {
