--- a/apps/docs/src/styles/layout/_nav.scss
+++ b/apps/docs/src/styles/layout/_nav.scss
@@ -78,11 +78,21 @@
 
   .nav__list {
     animation: fadeIn 0.4s ease-out;
+    width: 100%;
+    height: 100%;
+    overflow-y: auto;
+    padding-left: var(--px-4);
+    padding-bottom: var(--px-4);
+    scrollbar-width: none;
+
+    &::-webkit-scrollbar {
+      display: none;
+    }
 
     & li {
       animation: fadeInUp 0.4s ease-out backwards;
 
-      @for $i from 1 through 15 {
+      @for $i from 1 through 18 {
         &:nth-child(#{$i}) {
           animation-delay: #{$i * 0.05}s;
         }
@@ -99,7 +109,6 @@
   .nav__subtitle {
     animation: fadeIn 0.4s ease-out;
     position: relative;
-    overflow: hidden;
 
     &::after {
       content: "";
