--- a/apps/docs/src/styles/components/molecules/_controls.scss
+++ b/apps/docs/src/styles/components/molecules/_controls.scss
@@ -6,9 +6,14 @@
   border-radius: 0.375rem;
   padding: 2rem;
 
+  @include respond(md) {
+    padding: 1rem;
+  }
+
   display: flex;
   flex-direction: column;
   gap: var(--gap-4);
+  margin-bottom: 2rem;
 
   &__title {
     font-weight: 600;
